y.output
Gramática

    0 $accept: s $end

    1 s: prog

    2 prog: sent
    3     | prog sent

    4 sent: read
    5     | write
    6     | asig

    7 read: READ ID

    8 asig: ID ASIGNA posicion

    9 posicion: POSICION PARA ID PYC CA lista CC PARC
   10         | POSICION PARA ID PYC CA CC PARC

   11 lista: CTE
   12      | lista COMA CTE

   13 write: WRITE CTE_S
   14      | WRITE ID


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
WRITE (258) 13 14
POSICION (259) 9 10
READ (260) 7
PARA (261) 9 10
PARC (262) 9 10
CA (263) 9 10
CC (264) 9 10
COMA (265) 12
PYC (266) 9 10
ASIGNA (267) 8
ID (268) 7 8 9 10 14
CTE (269) 11 12
CTE_S (270) 13


No terminales con las reglas donde aparecen

$accept (16)
    en la izquierda: 0
s (17)
    en la izquierda: 1, en la derecha: 0
prog (18)
    en la izquierda: 2 3, en la derecha: 1 3
sent (19)
    en la izquierda: 4 5 6, en la derecha: 2 3
read (20)
    en la izquierda: 7, en la derecha: 4
asig (21)
    en la izquierda: 8, en la derecha: 6
posicion (22)
    en la izquierda: 9 10, en la derecha: 8
lista (23)
    en la izquierda: 11 12, en la derecha: 9 12
write (24)
    en la izquierda: 13 14, en la derecha: 5


estado 0

    0 $accept: . s $end

    WRITE  desplazar e ir al estado 1
    READ   desplazar e ir al estado 2
    ID     desplazar e ir al estado 3

    s      ir al estado 4
    prog   ir al estado 5
    sent   ir al estado 6
    read   ir al estado 7
    asig   ir al estado 8
    write  ir al estado 9


estado 1

   13 write: WRITE . CTE_S
   14      | WRITE . ID

    ID     desplazar e ir al estado 10
    CTE_S  desplazar e ir al estado 11


estado 2

    7 read: READ . ID

    ID  desplazar e ir al estado 12


estado 3

    8 asig: ID . ASIGNA posicion

    ASIGNA  desplazar e ir al estado 13


estado 4

    0 $accept: s . $end

    $end  desplazar e ir al estado 14


estado 5

    1 s: prog .
    3 prog: prog . sent

    WRITE  desplazar e ir al estado 1
    READ   desplazar e ir al estado 2
    ID     desplazar e ir al estado 3

    $default  reduce usando la regla 1 (s)

    sent   ir al estado 15
    read   ir al estado 7
    asig   ir al estado 8
    write  ir al estado 9


estado 6

    2 prog: sent .

    $default  reduce usando la regla 2 (prog)


estado 7

    4 sent: read .

    $default  reduce usando la regla 4 (sent)


estado 8

    6 sent: asig .

    $default  reduce usando la regla 6 (sent)


estado 9

    5 sent: write .

    $default  reduce usando la regla 5 (sent)


estado 10

   14 write: WRITE ID .

    $default  reduce usando la regla 14 (write)


estado 11

   13 write: WRITE CTE_S .

    $default  reduce usando la regla 13 (write)


estado 12

    7 read: READ ID .

    $default  reduce usando la regla 7 (read)


estado 13

    8 asig: ID ASIGNA . posicion

    POSICION  desplazar e ir al estado 16

    posicion  ir al estado 17


estado 14

    0 $accept: s $end .

    $default  aceptar


estado 15

    3 prog: prog sent .

    $default  reduce usando la regla 3 (prog)


estado 16

    9 posicion: POSICION . PARA ID PYC CA lista CC PARC
   10         | POSICION . PARA ID PYC CA CC PARC

    PARA  desplazar e ir al estado 18


estado 17

    8 asig: ID ASIGNA posicion .

    $default  reduce usando la regla 8 (asig)


estado 18

    9 posicion: POSICION PARA . ID PYC CA lista CC PARC
   10         | POSICION PARA . ID PYC CA CC PARC

    ID  desplazar e ir al estado 19


estado 19

    9 posicion: POSICION PARA ID . PYC CA lista CC PARC
   10         | POSICION PARA ID . PYC CA CC PARC

    PYC  desplazar e ir al estado 20


estado 20

    9 posicion: POSICION PARA ID PYC . CA lista CC PARC
   10         | POSICION PARA ID PYC . CA CC PARC

    CA  desplazar e ir al estado 21


estado 21

    9 posicion: POSICION PARA ID PYC CA . lista CC PARC
   10         | POSICION PARA ID PYC CA . CC PARC

    CC   desplazar e ir al estado 22
    CTE  desplazar e ir al estado 23

    lista  ir al estado 24


estado 22

   10 posicion: POSICION PARA ID PYC CA CC . PARC

    PARC  desplazar e ir al estado 25


estado 23

   11 lista: CTE .

    $default  reduce usando la regla 11 (lista)


estado 24

    9 posicion: POSICION PARA ID PYC CA lista . CC PARC
   12 lista: lista . COMA CTE

    CC    desplazar e ir al estado 26
    COMA  desplazar e ir al estado 27


estado 25

   10 posicion: POSICION PARA ID PYC CA CC PARC .

    $default  reduce usando la regla 10 (posicion)


estado 26

    9 posicion: POSICION PARA ID PYC CA lista CC . PARC

    PARC  desplazar e ir al estado 28


estado 27

   12 lista: lista COMA . CTE

    CTE  desplazar e ir al estado 29


estado 28

    9 posicion: POSICION PARA ID PYC CA lista CC PARC .

    $default  reduce usando la regla 9 (posicion)


estado 29

   12 lista: lista COMA CTE .

    $default  reduce usando la regla 12 (lista)
